<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:outlineProvider="none"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                android:text="@string/profile" />


            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/surname"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:editable="false"
                android:hint="@string/role"
                android:inputType="none"
                android:minHeight="48dp" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:minHeight="48dp"
                    android:text="@string/update"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:minHeight="48dp"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:minHeight="48dp"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>