<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".RegisterActivity"
    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:outlineProvider="none"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            android:text="@string/register" />


        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxWidth="480dp"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxWidth="480dp"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxWidth="480dp"
            android:hint="@string/surname"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxWidth="480dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:minHeight="48dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/already_have_an_account_login" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


