<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="#F80000" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRoleChangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:backgroundTint="@color/black"
                android:text="@string/change_role"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:id="@+id/tvUserIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/user_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSurnameLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/surname"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRoleLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/role"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRoleChange"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:backgroundTint="@color/black"
                android:padding="5dp"
                android:text="@string/change_role_btn"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:icon="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:id="@+id/tvUserId"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/user_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/surname"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRole"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/role"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>