<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".CreateEventActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:outlineProvider="none"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/tvEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                android:text="@string/crate_event" />

            <EditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:editable="false"
                android:hint="@string/id"
                android:maxWidth="480dp"
                android:minHeight="48dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxWidth="480dp"
                android:hint="@string/title"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxWidth="480dp"
                android:minHeight="48dp"
                android:hint="11/10/2024"
                android:inputType="date" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxWidth="480dp"
                android:minHeight="48dp"
                android:hint="09:00"
                android:inputType="time"
                 />

            <EditText
                android:id="@+id/etActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxWidth="480dp"
                android:minHeight="48dp"
                android:hint="@string/activities"
                android:inputType="text"
                 />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:minHeight="48dp"
                android:text="@string/create"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:minHeight="48dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>