<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="#F80000" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvEventIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/event_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvActivitiesLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/activities"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEventId"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/event_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvActivities"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/activities"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>